# stolovko

./: CMakeLists.txt  Context.cpp  Context.h  Logger.cpp  Logger.h  main.cpp
ipresenter/: IPresenter.h
iview/: IView.h
model/: Client.cpp  Client.h  Model.cpp  Queue.cpp  Queue.h  QueueIterator.cpp  QueueIterator.h
model/visitors/: FairNextClientVisitor.cpp  FairNextClientVisitor.h  LazyNextClientVisitor.cpp  LazyNextClientVisitor.h  NextClientVisitor.cpp  NextClientVisitor.h  QueueVisitor.h
presenter/: Presenter.cpp  Presenter.h
view/: MessageHandler.cpp  MessageHandler.h  View.cpp  View.h  Visualization.cpp  Visualization.h
